name:                osc
version:             0.1.0.0
homepage:            https://github.com/githubuser/osc#readme
license:             BSD3
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
copyright:           2017 Owain Lewis
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Scheme.Scheme,
                       Language.Scheme.Internal.Parser,
                       Language.Scheme.Internal.AST,
                       Language.Scheme.Internal.Eval
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       mtl,
                       parsec,
                       transformers,
                       text
  default-language:    Haskell2010

executable osc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , osc
  default-language:    Haskell2010

test-suite osc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , osc == 0.1.0.0
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/osc
